Expand script to define release type

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -21,11 +21,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: NPM install
+        run: npm install
+
       - name: Run JS script to set environment variable
         run: node scripts/set-env-vars.mjs
 
       - name: Use the environment variable
-        run: echo "The value of MY_VARIABLE is $MY_VARIABLE"
+        run: echo "The value of MY_VARIABLE is $MY_VARIABLE, RELEASE_TYPE => $RELEASE_TYPE"
 
       - name: Fetch previous tags
         run: git fetch --tags
